--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,10 @@ before_script:
   - sleep 1 # give server time to start
 
 script:
-  - node_modules/.bin/karma start karma.conf.js --no-auto-watch --single-run --reporters=dots --browsers=Firefox
+  #- node_modules/.bin/karma start karma.conf.js --no-auto-watch --single-run --reporters=dots --browsers=Firefox
   - node_modules/.bin/protractor e2e-tests/protractor.conf.js --browser=firefox
+
+deploy:
+  provider: heroku
+  api_key: 88586fb1-8794-4e68-9947-6408d2d7a68a
+  app: pdp-angular
